added references and links to images

--- a/homepage.html
+++ b/homepage.html
@@ -89,23 +89,31 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 4</div>
+      <a href="valorant.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
+      </a>
       <div class="text">Valorant</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 4</div>
+      <a href="homepage.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
-      <div class="text">Home</div>
+    </a>
+    <div class="text">Home</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">3 / 4</div>
+      <a href="rdr2.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146279031-a9264402-f91f-4299-a5d3-4d4794e65886.png" style="width:100%">
+    </a>
       <div class="text">Red Dead Redemption</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">4/ 4</div>
+      <a href="needforspeed.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146660432-69ae1a58-7223-4f31-b633-c8eabae113d3.jpeg" style="width:100%">
+    </a>
       <div class="text">Need for speed</div>
     </div>
     <br>
