--- a/rdr2.html
+++ b/rdr2.html
@@ -71,6 +71,7 @@
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
+                    <a href="index.php">Browse Articles</a>
         </div>
 
     <div class="quizmaintingz">
