--- a/quiz.html
+++ b/quiz.html
@@ -56,6 +56,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <a href="index.php">Browse Articles</a>
 </div>
 <div class="grid">
     <div id="quiz">
