added internal references to all of them

--- a/quiz.html
+++ b/quiz.html
@@ -49,9 +49,9 @@
             <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                 alt="logo" style="width: 100px;height:50px;float:right">
             <a href="homepage.html">Home</a>
-            <a href="rdr2.html">Adventure game</a>
+            <a href="rdr2.html">Red Dead Redemption</a>
             <a href="needforspeed.html">Need for speed: Rivals</a>
-            <a href="valorant.html">Multiplayer shooters</a>
+            <a href="valorant.html">Valorant</a>
             <a href="quiz.html" class="active">Quiz</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
