--- a/valorant.html
+++ b/valorant.html
@@ -65,7 +65,7 @@
                     <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                         alt="logo" style="width: 100px;height:50px;float:right">
                     <a href="homepage.html">Home</a>
-                    <a href="rdr2.html">Adventure game</a>
+                    <a href="rdr2.html">Red dead Redemption</a>
                     <a href="needforspeed.html">Need for speed: Rivals</a>
                     <a href="valorant.html" class="active">Valorant</a>
                     <a href="quiz.html">Quiz</a>
