--- a/needforspeed.html
+++ b/needforspeed.html
@@ -52,11 +52,11 @@
 
 <body id="body">
 
-    <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
+    <img src="https://user-images.githubusercontent.com/94490873/147043277-a2069e85-c184-46d6-961f-2d269921c39f.jpeg"
       class="bg">
       <body id="body">
         <div id="backgroundimage">
-            <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
+            <img src="https://user-images.githubusercontent.com/94490873/147043277-a2069e85-c184-46d6-961f-2d269921c39f.jpeg" class="bg">
            
         </div>
         
