pushed unique background for each article

--- a/rdr2.html
+++ b/rdr2.html
@@ -51,11 +51,11 @@
 
 <body id="body">
 
-    <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
+    <img src="https://user-images.githubusercontent.com/94490873/147044558-9583eb86-49a6-4161-a406-17aea9c1a079.jpeg"
       class="bg">
       <body id="body">
         <div id="backgroundimage">
-            <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
+            <img src="https://user-images.githubusercontent.com/94490873/147044558-9583eb86-49a6-4161-a406-17aea9c1a079.jpeg" class="bg">
            
         </div>
         
