--- a/valorant.html
+++ b/valorant.html
@@ -52,11 +52,11 @@
 
 <body id="body">
 
-    <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
+    <img src="https://user-images.githubusercontent.com/94490873/147044033-4e67b367-ae61-490c-98d6-ce9a6a80b9c6.jpeg"
       class="bg">
       <body id="body">
         <div id="backgroundimage">
-            <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
+            <img src="https://user-images.githubusercontent.com/94490873/147044033-4e67b367-ae61-490c-98d6-ce9a6a80b9c6.jpeg" class="bg">
            
         </div>
         
