--- a/needforspeed.html
+++ b/needforspeed.html
@@ -67,7 +67,7 @@
                     <a href="homepage.html" >Home</a>
                     <a href="rdr2.html">Red Dead Redemption 2</a>
                     <a href="needforspeed.html" class="active">Need for speed: Rivals</a>
-                    <a href="valorant.html">Multiplayer shooters</a>
+                    <a href="valorant.html">Valorant</a>
                     <a href="quiz.html">Quiz</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
