--- a/rdr2.html
+++ b/rdr2.html
@@ -63,10 +63,10 @@
         <div class="topnav" id="myTopnav">
                     <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                         alt="logo" style="width: 100px;height:50px;float:right">
-                    <a href="homepage.html" class="active">Home</a>
-                    <a href="rdr2.html">Red Dead Redemption 2</a>
+                    <a href="homepage.html" >Home</a>
+                    <a href="rdr2.html" class="active">Red Dead Redemption 2</a>
                     <a href="needforspeed.html">Need for speed: Rivals</a>
-                    <a href="valorant.html">Multiplayer shooters</a>
+                    <a href="valorant.html">Valorant</a>
                     <a href="quiz.html">Quiz</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
