--- a/rdr2.html
+++ b/rdr2.html
@@ -125,8 +125,8 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
   </div>
- 
     
   <div style="background: ghostwhite; 
   font-size: 20px; 
