--- a/needforspeed.html
+++ b/needforspeed.html
@@ -227,7 +227,7 @@
     </p>
     <h5 id="h5">The map</h5>
     <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/need-for-speed-rivals/7/76/Speedcameras.jpeg?width=960" id="img" width="300" height="300">
-    <p>Need for Speed rivals features a fairly large map. Trumping the previous entry, Rivals has a solid 16x16 km map space. 
+    <p>Need for Speed rivals features a fairly large map. Trumping the previous entry, Rivals has a solid 16x16 km map space. Featuring various types of terrains, roads, and tracks, you can drive everywhere from an empty forest to a bustling city. The world is filled with NPCs that are both cops and racers along with civilians. Cops will pursue you, often using brutal tactics to stop you, while racers will challenge you to your utmost limit, all in a gameplay which even in single player feels as organic and seamless as any new triple A game.  
     </p>
 </div>
 
