--- a/homepage.html
+++ b/homepage.html
@@ -140,7 +140,8 @@
   padding: 10px; 
   border: 1px solid lightgray; 
   margin-left: 300px;
-  margin-right:300px;">
+  margin-right:300px;
+  font-family:lato">
   <!--text -->
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
