--- a/needforspeed.html
+++ b/needforspeed.html
@@ -134,7 +134,8 @@
   padding: 10px; 
   border: 1px solid lightgray; 
   margin-left: 300px;
-  margin-right:300px;">
+  margin-right:300px;
+  font-family:lato"">
     <h1 id="h1">Need For Speed: Rivals</h1>
     <hr id="solid">
     <br>
