--- a/rdr2.html
+++ b/rdr2.html
@@ -133,7 +133,8 @@
   padding: 10px; 
   border: 1px solid lightgray; 
   margin-left: 300px;
-  margin-right:300px;">
+  margin-right:300px;
+  font-family:lato;">
     <h1 id="h1">Red Dead Redemption II</h1>
     <hr id="solid">
     <br>
