--- a/valorant.html
+++ b/valorant.html
@@ -129,12 +129,13 @@
         </div>
  
     
-  <div style="background: ghostwhite; 
-  font-size: 20px; 
-  padding: 10px; 
-  border: 1px solid lightgray; 
-  margin-left: 300px;
-  margin-right:300px;">
+        <div style="background: ghostwhite; 
+        font-size: 20px; 
+        padding: 10px; 
+        border: 1px solid lightgray; 
+        margin-left: 300px;
+        margin-right:300px;
+        font-family:lato"">
     <h1 id="h1">Valorant</h1>
     <hr id="solid">
     <br>
