rdr12 val trilers aded

--- a/valorant.html
+++ b/valorant.html
@@ -157,6 +157,7 @@
         They are Brimstone, Viper, Omen, Cypher, Sova, Sage, Phoenix, Jett, Raze, Breach, Reyna, Killjoy, Skye, Yoru,
         Astra, KAY/O, and Chamber.
     </p>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/lWr6dhTcu-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <br>
     <div id="toc_container">
       <p class="toc_title">
